<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_search_weather"
    tools:context=".screen.search_weather.SearchWeatherFragment"
    android:padding="@dimen/dp_12">


    <!-- Thanh tìm kiếm -->
    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_bar_height"
        android:background="@drawable/bg_search"
        android:hint="@string/search_location"
        android:drawableStart="@drawable/ic_search_dark"
        android:paddingHorizontal="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Vị trí hiện tại -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_body_small"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCityCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_city_hanoi"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_body_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCountryCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_country_vietnam"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvDescCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_weather_desc_current"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTempCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_temp_current"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_temperature_large"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Tìm kiếm gần đây -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_searches"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/text_size_body_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCityRecent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_city_danang"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_body_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCountryRecent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_country_vietnam"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvDescRecent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_weather_desc_recent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTempRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_temp_recent"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_temperature_large"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>