<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Skeleton Loading Layout -->
    <include
        android:id="@+id/skeletonLayout"
        layout="@layout/skeleton_home_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <!-- Main Content with SwipeRefreshLayout -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/card_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/weatherHeroSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivWeatherBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/home_card"
                app:shapeAppearanceOverlay="@style/RoundedCornerImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="@color/white"
                android:text="@string/home_current_location"
                android:gravity="top|start"
                android:layout_margin="16dp" />


            <ImageView
                android:id="@+id/icSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                android:layout_gravity="top|end"
                android:layout_margin="16dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tvCurrentTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@id/tvWeather"
                    android:textSize="74sp"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/home_current_temperature" />

                <TextView
                    android:id="@+id/tvFeelsLikeTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/tvCurrentTemperature"
                    app:layout_constraintBaseline_toBaselineOf="@id/tvWeather"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    android:text="@string/home_feels_like_temperature" />

                <ImageView
                    android:id="@+id/icWeatherIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_cloud_and_sun"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:id="@+id/tvWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/icWeatherIcon"
                    app:layout_constraintStart_toStartOf="@id/icWeatherIcon"
                    android:textSize="24sp"
                    android:maxLines="2"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_weather_condition" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom" >

                <TextView
                    android:id="@+id/tvCurrentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/home_current_time"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="16dp"/>

                <TextView
                    android:id="@+id/tvDayTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/home_day_temperature"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tvNightTemperature"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/tvNightTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/home_night_temperature"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/weatherDetailsSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/weather_card_background"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/weatherHeroSection">

            <!-- Section Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_rainbow"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    android:background="@drawable/ic_bg_purple"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_details"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium" />

            </LinearLayout>

            <!-- Weather Details Grid -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Wind Speed -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/weather_card_detail">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_windy"
                        android:layout_marginEnd="12dp"
                        android:layout_gravity="center"
                        android:padding="4dp"
                        android:background="@drawable/ic_bg_white"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wind_speed"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_wind_speed_value"
                        android:textAlignment="textEnd"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="8dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_up"
                        app:tint="#04BEFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_wind_speed_change"
                        android:textColor="@color/text_secondary"
                        android:textSize="12sp" />

                </LinearLayout>

                <!-- Pressure -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/weather_card_detail">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_pressure"
                        android:layout_marginEnd="12dp"
                        android:padding="4dp"
                        android:background="@drawable/ic_bg_white"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pressure"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_pressure_value"
                        android:textAlignment="textEnd"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="8dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_down"
                        app:tint="#FF0421" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_pressure_change"
                        android:textColor="@color/text_secondary"
                        android:textSize="12sp" />

                </LinearLayout>

                <!-- Humidity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/weather_card_detail">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_rain"
                        android:layout_marginEnd="12dp"
                        android:padding="4dp"
                        android:background="@drawable/ic_bg_white"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/humidity"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_humidity_value"
                        android:textAlignment="textEnd"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="8dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_up"
                        app:tint="#04BEFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_humidity_change"
                        android:textColor="@color/text_secondary"
                        android:textSize="12sp" />

                </LinearLayout>

                <!-- UV Index -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/weather_card_detail">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_uv"
                        android:padding="4dp"
                        android:background="@drawable/ic_bg_white"
                        android:layout_marginEnd="12dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/uv_index"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvUvIndex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_uv_index_value"
                        android:textAlignment="textEnd"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="8dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_up"
                        app:tint="#04BEFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_uv_index_change"
                        android:textColor="@color/text_secondary"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>
